Fixed z-index

--- a/style.css
+++ b/style.css
@@ -51,9 +51,11 @@ h3 {
   border-top: none;
   border-left: none;
   box-shadow: 4px 4px 0 #ffcb05;
-  transition: 0.3s ease;
+  transition: .3s ease;
+  z-index: 0;
 }
 .section:hover {
+  z-index: 1;
   scale: 1.2;
   transition-timing-function: cubic-bezier(0.34, 1.56, 0.64, 1);
   box-shadow: 4px 4px 0 #ffcb05, 1px 1px 2px rgba(3, 7, 18, 0.116),
@@ -141,6 +143,7 @@ p {
   margin: 20px auto 0px auto;
 }
 .pokeball {
+  z-index: 10;
   height: 100%;
   width: 100%;
   border-radius: 50%;
@@ -155,7 +158,6 @@ p {
     ),
     linear-gradient(red 46%, #1b1b1b 46%, #1b1b1b 54%, #fff 54%);
   position: absolute;
-  z-index: 1;
 }
 .dummy {
   /* border: 0.4vmin solid transparent; */
@@ -164,13 +166,13 @@ p {
   border-radius: 50%;
   box-shadow: 0.5vw 0.5vw 0 #2a75bb;
   position: absolute;
-  z-index: 0;
+  z-index: 9;
 }
 .yellow-spot {
   margin-left: 22%;
   margin-top: 12%;
   position: absolute;
-  z-index: 2;
+  z-index: 11;
   width: 30%;
   height: 20%;
   border-radius: 50%;
@@ -178,6 +180,7 @@ p {
   rotate: -25deg;
 }
 .poke-bottom {
+  z-index: 12;
   height: 100%;
   width: 100%;
   /* margin: 30px auto -10px auto; */
@@ -190,6 +193,7 @@ p {
   box-shadow: 0px 0px 40px rgba(249, 251, 255, 0.637);
 } */
 header {
+  z-index: 99;
   background-color: #d62828;
   max-width: 1200px;
   position: sticky;
@@ -206,6 +210,7 @@ header {
   /* 12px 12px 33px rgba(3, 7, 18, 0.21), 18px 18px 52px rgba(3, 7, 18, 0.26); */
 }
 .back-to-top {
+  z-index: 10;
   height: 80px;
   width: 80px;
   position: relative;
@@ -264,7 +269,7 @@ header {
   }
   .section:hover {
     pointer-events: none;
-    scale: none;
+    /* scale: none; */
   }
   h1 {
     margin: 20px 5px;
